Finished admin logging in & viewing users accounts. Added checks for is_admin among other things. Finished user pages & logging out. Still to do: logging out as an admin, fixing some issues with sending people to error page instead of login after restarting the server among other small inconveniences.

--- a/src/main/resources/frontend/current/account/dashboard/DashboardPage.html
+++ b/src/main/resources/frontend/current/account/dashboard/DashboardPage.html
@@ -13,9 +13,9 @@
 
 		<nav class="topnav">
 			<a class="active" href="DashboardPage.html">Home</a>
-			<a href="TransactionsPage.html">Transactions</a>
-			<a href="SummaryOfSpending.html">Account Summary</a>
-			<a href="Settings.html">Settings</a>
+			<a href="../transactions/TransactionsPage.html">Transactions</a>
+			<a href="../spending/SummaryOfSpending.html">Account Summary</a>
+			<a href="../settings/Settings.html">Settings</a>
 		</nav>
 
 		<section class="acc-overview">
@@ -61,7 +61,7 @@
 					</tbody>
 				</table>
 				
-				<a href="TransactionsPage.html">View More</a>
+				<a href="../transactions/TransactionsPage.html">View More</a>
 			</div>
 			
 			<!--outgoing-table-->
@@ -99,7 +99,7 @@
 					</tbody>
 				</table>
 				
-				<a href="TransactionsPage.html">View More</a>
+				<a href="../transactions/TransactionsPage.html">View More</a>
 			</div>
 		</section>
 	</body>
