--- a/src/main/resources/frontend/current/account/settings/Settings.html
+++ b/src/main/resources/frontend/current/account/settings/Settings.html
@@ -13,9 +13,9 @@
 		</div>
 
 		<nav class="topnav">
-			<a href="DashboardPage.html">Home</a>
-			<a href="TransactionsPage.html">Transactions</a>
-			<a href="SummaryOfSpending.html">Account Summary</a>
+			<a href="../dashboard/DashboardPage.html">Home</a>
+			<a href="../transactions/TransactionsPage.html">Transactions</a>
+			<a href="../spending/SummaryOfSpending.html">Account Summary</a>
 			<a class="active" href="Settings.html">Settings</a>
 		</nav>
 		
