--- a/src/main/resources/frontend/current/account/spending/SummaryOfSpending.html
+++ b/src/main/resources/frontend/current/account/spending/SummaryOfSpending.html
@@ -12,10 +12,10 @@
 		</div>
 		
 		<nav class="topnav">
-			<a href="DashboardPage.html">Home</a>
-			<a href="TransactionsPage.html">Transactions</a>
+			<a href="../dashboard/DashboardPage.html">Home</a>
+			<a href="../transactions/TransactionsPage.html">Transactions</a>
 			<a class="active" href="SummaryOfSpending.html">Account Summary</a>
-			<a href="Settings.html">Settings</a>
+			<a href="../settings/Settings.html">Settings</a>
 		</nav>
 		
 		<section class="spending">
