--- a/src/main/resources/frontend/current/account/transactions/TransactionsPage.html
+++ b/src/main/resources/frontend/current/account/transactions/TransactionsPage.html
@@ -14,10 +14,10 @@
 		</div>
 
 		<nav class="topnav">
-			<a href="DashboardPage.html">Home</a>
+			<a href="../dashboard/DashboardPage.html">Home</a>
 			<a class="active" href="TransactionPage.html">Transactions</a>
-			<a href="SummaryOfSpending.html">Account Summary</a>
-			<a href="Settings.html">Settings</a>
+			<a href="../spending/SummaryOfSpending.html">Account Summary</a>
+			<a href="../settings/Settings.html">Settings</a>
 		</nav>
 
 		<section class="trans-overview">
