--- a/src/main/resources/frontend/current/admin/AdminPage.html
+++ b/src/main/resources/frontend/current/admin/AdminPage.html
@@ -17,7 +17,6 @@
 			<a href="#Big Spenders">Big Spenders</a>
 		</nav>
 
-
 		<section class="account-list">
 			<h2>Account List View</h2>
 			
@@ -39,7 +38,7 @@
 						<td>Savings</td>
 						<td>£4,900.00</td>
 						<td><div class="buttons">
-						<a href="../account/DashboardPage.html"><button class="view-btn">View Details</button></a>
+						<a href="../account/dashboard/DashboardPage.html"><button class="view-btn">View Details</button></a>
 						</div></td>
 					</tr>
 					
@@ -49,7 +48,7 @@
 						<td>Business</td>
 						<td>£5,000.00</td>
 						<td><div class="buttons">
-						<a href="../account/DashboardPage.html"><button class="view-btn">View Details</button></a>
+						<a href="../account/dashboard/DashboardPage.html"><button class="view-btn">View Details</button></a>
 						</div></td>
 					</tr>
 				</tbody>
